# tec_heuristica

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Edge.h  GeneticSolver.h  Interface.h  PhysarumSolver.h  PhysarumSolverV3.h  SolutionValidator.h
lab/tinyxml2/: CTestTestfile.cmake  DartConfiguration.tcl
src/: Edge.cpp  GeneticSolver.cpp  Interface.cpp  PhysarumSolver.cpp  Route.cpp  main.cpp
tec_heuristica_pj1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tec_heuristica_pj1/include/: Interface.h  PhysarumSolver.h  Route.h  Types.h
tec_heuristica_pj1/lab/: CMakeLists.txt
tec_heuristica_pj1/lab/tinyxml2/: DartConfiguration.tcl  Makefile  cmake_install.cmake
tec_heuristica_pj1/src/: Interface.cpp  PhysarumSolver.cpp  PhysarumSolverV3.cpp  SolutionValidator.cpp  main.cpp
